fixed community cards and dark mode

--- a/src/screens/Poker/components/PokerPlayer/index.scss
+++ b/src/screens/Poker/components/PokerPlayer/index.scss
@@ -27,9 +27,7 @@
     top: 0;
     .player__bet {
       left: 80%;
-      top: 220%;
-    }
-    .dealer-token {
+      top: 120%;
     }
   }
 
@@ -37,7 +35,8 @@
     left: 50vw;
     top: 0;
     .player__bet {
-      top: 220%;
+      top: 80%;
+      left: -20%;
     }
   }
 
